fixed header z-index

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -43,6 +43,7 @@ header {
 	width: 100%;
 	position: fixed;
 	top: 0px;
+	z-index: 1000;
 }
 
 footer {
