--- a/web/css/app_part_4_my-style_1.css
+++ b/web/css/app_part_4_my-style_1.css
@@ -21,6 +21,7 @@ header {
 	width: 100%;
 	position: fixed;
 	top: 0px;
+	z-index: 1000;
 }
 
 footer {
